# coasync

./: .gitignore  CMakeLists.txt  LICENSE  README.md  async_fn.hpp  co_bind.hpp  co_spawn.hpp  execution_context.hpp  set_stop_source.hpp  when_any.hpp  xmake.lua
demo/: yield.cc
demo/net/: deserialize.cc  resolver.cc
demo/net/rpc/: rpc_server1.cc
detail/: awaitable_frame.hpp  awaitable_frame_alloc.hpp  awaitable_frame_base.hpp  basic_lockable.hpp  config.h  get_frame.hpp  get_id.hpp  manual_lifetime.hpp  networking.hpp  object_deduce.hpp  service_registry.hpp  spin_loop_pause.hpp  windows_initiate.hpp  workstealing.hpp
detail/meta/: function_traits.hpp  member_field.hpp  signature.hpp
detail/service/: dequeue_service.hpp  enqueue_service.hpp  flag_service.hpp  socket_service.hpp  yield_service.hpp
example/: and_or.cc  awaitable_group.cc  channel.cc  co_bind.cc  co_mutex.cc  co_signal.cc  co_spawn.cc  condition_variable.cc  deadline_timer.cc  functional.cc  generator.cc  pipeline.cc  sleep.cc  timeout.cc  when_any_all.cc  yield.cc
example/net/: cancel.cc  client.cc  deserialize.cc  deserialize_struct.cc  network_v4.cc  read.cc  resolver.cc  send.cc  serialize.cc  serialize_struct.cc
example/net/rpc/: rpc_client1.cc  rpc_server1.cc
example/rpc/: rpc_client1.cc  rpc_server1.cc
include/: coasync.hpp
include/coasync/: async_fn.hpp  awaitable.hpp  awaitable_group.hpp  cancellation_error.hpp  channel.hpp  co_bind.hpp  co_condition_variable.hpp  co_latch.hpp  co_mutex.hpp  co_semaphore.hpp  co_signal.hpp  co_spawn.hpp  deadline_timer.hpp  execution_context.hpp  functional.hpp  generator.hpp  set_stop_source.hpp  this_coro.hpp  when_all.hpp  when_any.hpp
include/coasync/detail/: awaitable_frame.hpp  awaitable_frame_alloc.hpp  awaitable_frame_base.hpp  basic_lockable.hpp  config.hpp  frame_delegate.hpp  frame_executor.hpp  frame_lifetime.hpp  get_context.hpp  get_frame.hpp  get_id.hpp  get_stop_token.hpp  manual_lifetime.hpp  networking.hpp  object_deduce.hpp  remote_queue.hpp  ring_container.hpp  service_registry.hpp  signal_condition.hpp  spin_loop_pause.hpp  (+4 more)
net/: address.hpp  address_v4.hpp  message_flags.hpp  option.hpp  port.hpp  protocol.hpp  receive.hpp  resolver.hpp  resolver_flags.hpp  scope_id.hpp  send.hpp
test/: awaitable.cc  channel.cc  client.cc  co_function.cc  co_spawn.cc  config.cc  frame_executor.cc  gmon.out  manual_lifetime.cc  networking.cc  rpc_client.cc  rpc_server.cc  serde_stream_base.cc  serde_stream_base2.cc  serialize.cc  server.cc  signature.cc  time_service.cc  use_service.cc  when_all.cc  when_any.cc  when_any_all.cc  workstealing.cc
(+44 files in other folders)
